css main content

--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -5,3 +5,7 @@
 /* ***************** header & footer ***************** */
 
 /* ***************** main content ***************** */
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
