--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -1,4 +1,14 @@
 /* ***************** utilities & containers ***************** */
+.container {
+    max-width: 95.5rem;
+    margin: 0 auto;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
 
 /* ***************** global typography ***************** */
 
@@ -8,5 +18,4 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    
 }
