--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -1,4 +1,12 @@
 /* ***************** utilities & containers ***************** */
+:root {
+    --primary-blue: #0C4A6E;
+    --off-white: #fafafa;
+    --black: #000;
+    --grey: #c3c3c4;
+
+}
+
 .container {
     max-width: 95.5rem;
     margin: 0 auto;
@@ -11,11 +19,16 @@
 }
 
 /* ***************** global typography ***************** */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+}
+
+
 
 /* ***************** header & footer ***************** */
 
+
+
 /* ***************** main content ***************** */
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
