--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -24,6 +24,15 @@ body {
     font-size: 1rem;
 }
 
+h1 {
+    font-size: 1.625rem;
+    color: var(--off-white);
+    font-weight: 700;
+    background-color: var(--primary-blue);
+    padding: 1.625rem 0 1.625rem 6.25rem;
+    margin-bottom: 1.75rem;
+}
+
 
 
 /* ***************** header & footer ***************** */
