css team section adjust and team p added

--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -35,9 +35,13 @@ h1 {
 
 .team section {
     width: calc(100% / 4) - (2rem / 4);
-    max-width: 46.75rem;
+    max-width: 43.25rem;
     background-color: var(--grey);
     padding: 1.75rem 2rem;
+}
+
+.team p {
+    max-width: 27.25rem;
 }
 
 
