--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -22,6 +22,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+    font-weight: 700;
 }
 
 h1 {
@@ -40,9 +41,11 @@ h3 {
     font-size: 3rem;
 }
 
-.members {
-    
+p,li,cite {
+    font-weight: 400;
 }
+
+
 
 
 
