css container adjust

--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -45,6 +45,13 @@ p,li,cite {
     font-weight: 400;
 }
 
+.container section,h2{
+    padding: 0 6.25rem;
+}
+
+.flex-container section {
+    width: calc(100% - 2rem);
+}
 
 
 
