--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -67,8 +67,14 @@ p,li,cite {
     /* to make the contents be centered */
 }
 
+.members img {
+    margin: 0 3.5rem 0 1.75rem;
+    padding: 2.5rem 0;
+}
+
 section .members {
     background-color: var(--grey);
+    margin-bottom: 1.25rem;
 }
 
 
