--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -18,6 +18,8 @@
     flex-wrap: wrap;
     /* make contents go to next line if they have wrong value of width */
     gap: 2rem;
+    justify-content: center
+
 }
 
 /* ***************** global typography ***************** */
@@ -84,6 +86,24 @@ section .members {
 }
 
 .plan {
-    justify-content: center;
+    width: calc((100% / 3) - (2rem / 3));
     background-color: var(--grey);
+    max-width: 30.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
+
+.plan h4 {
+    font-size: 2.125rem;
+    font-weight: 700;
+}
+
+.plan p {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--primary-blue);
+}
+
+
