--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-    max-width: 108rem;
+    max-width: 95.5rem;
     margin: 0 auto;
 }
 
@@ -18,7 +18,7 @@
     flex-wrap: wrap;
     /* make contents go to next line if they have wrong value of width */
     gap: 2rem;
-    justify-content: center
+    justify-content: center;
 
 }
 
@@ -94,6 +94,7 @@ section .members {
     align-items: center;
     text-align: center;
     justify-content: space-between;
+    padding: 1.75rem 0;
 }
 
 .plan h4 {
